Fixed icon alignment
git-svn-id: https://oss.gonicus.de/repositories/gosa/trunk@16400 594d385d-05f5-0310-b6e9-bd551577e9d8

--- a/html/themes/modern/style.css
+++ b/html/themes/modern/style.css
@@ -861,6 +861,7 @@ div.mainlist-nav td div.img{
 
 div.mainlist-nav td{
   padding:3px 5px;
+  vertical-align:middle;
 }
 
 div.mainlist-nav td.left-border{
